[gd_scene load_steps=2 format=3 uid="uid://cq7n3yw4ujqxr"]

[ext_resource type="Script" path="res://scripts/lab/UIComponentsDemo.gd" id="1_x9qkj"]

[node name="UIComponentsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x9qkj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Themed UI Components"
horizontal_alignment = 1

[node name="CheckboxesPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CheckboxesPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CheckboxesPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Checkboxes"

[node name="CheckboxesGrid" type="VBoxContainer" parent="VBoxContainer/CheckboxesPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ButtonsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ButtonsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Buttons"

[node name="ButtonsGrid" type="VBoxContainer" parent="VBoxContainer/ButtonsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Status: Ready"
horizontal_alignment = 1
